tests/neg/i4350.scala
import scala.quoted.TypeTag

class Foo[T] {
  '{null.asInstanceOf[T]} // error
}
